--- a/my-admin/package.json
+++ b/my-admin/package.json
@@ -11,10 +11,14 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@types/vue": "^2.0.0",
+    "@wangeditor/editor-for-vue": "^5.1.12",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
+    "ts": "^0.2.2",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vue-tsc": "^2.0.14"
   },
   "devDependencies": {
     "@iconify-json/ep": "^1.1.15",
