--- a/my-admin/package.json
+++ b/my-admin/package.json
@@ -15,6 +15,7 @@
     "@wangeditor/editor-for-vue": "^5.1.12",
     "axios": "^1.6.8",
     "dayjs": "^1.11.11",
+    "echarts": "^5.5.0",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
     "ts": "^0.2.2",
