新增评论 和友链接口 关于我页面

--- a/my-blog/package.json
+++ b/my-blog/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "PORT=8080 nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
@@ -23,6 +23,7 @@
     "pinia-plugin-persist": "^1.0.0",
     "pinia-plugin-persistedstate": "^3.2.1",
     "sharp": "^0.33.3",
+    "valine": "^1.5.1",
     "vue": "^3.4.21",
     "vue-i18n": "^9.11.1",
     "vue-router": "^4.3.0"
