--- a/my-blog/package.json
+++ b/my-blog/package.json
@@ -3,8 +3,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "nuxt build",
-    "dev": "PORT=8080 nuxt dev",
+    "build": "nuxt build --dotenv .env.development --exec",
+    "build:pro": "nuxt build --dotenv  .env.production --exec",
+    "dev": "PORT=8080 nuxt dev --dotenv .env.development --exec",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
@@ -17,6 +18,7 @@
     "@tailwindcss/typography": "^0.5.12",
     "clipboard": "^2.0.11",
     "daisyui": "^4.9.0",
+    "dotenv": "^16.4.5",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.1",
     "nuxt": "^3.11.1",
