--- a/my-blog/package.json
+++ b/my-blog/package.json
@@ -19,12 +19,14 @@
     "clipboard": "^2.0.11",
     "daisyui": "^4.9.0",
     "dotenv": "^16.4.5",
+    "medium-zoom": "^1.1.0",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.1",
     "nuxt": "^3.11.1",
     "pinia-plugin-persist": "^1.0.0",
     "pinia-plugin-persistedstate": "^3.2.1",
     "sharp": "^0.33.3",
+    "v-viewer": "^3.0.13",
     "valine": "^1.5.1",
     "vue": "^3.4.21",
     "vue-i18n": "^9.11.1",
